force-app/main/default/objects/Contact/fields/u_Center_Access__c.field-meta.xml
<CustomField>
    <fullName>u_Center_Access__c</fullName>
    <label>u Center Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>u_Center_Access_Level</valueSetName>
    </valueSet>
</CustomField>