force-app/main/default/objects/Contact/fields/ubxEvent__c.field-meta.xml
<CustomField>
    <fullName>ubxEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visited Event</label>
    <referenceTo>ubxEvent__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>