force-app/main/default/objects/Contact/fields/Visiting_Address_changed__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Address_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set by an APEX Class to trigger an update of the Contact address fields</description>
    <label>Visiting Address changed</label>
    <type>Checkbox</type>
</CustomField>