force-app/main/default/objects/Contact/fields/Webinar_email__c.field-meta.xml
<CustomField>
    <fullName>Webinar_email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Receives &quot;Webinar email&quot; (Email Type in Campaign) by mass mail</inlineHelpText>
    <label>Webinar email</label>
    <type>Checkbox</type>
</CustomField>