force-app/main/default/objects/Contact/fields/Winner_mbed_Board__c.field-meta.xml
<CustomField>
    <fullName>Winner_mbed_Board__c</fullName>
    <defaultValue>false</defaultValue>
    <description>10 contacts are winners of mbed board Tombola @ Embedded World 2014</description>
    <label>Winner mbed Board</label>
    <type>Checkbox</type>
</CustomField>