force-app/main/default/objects/Contact/fields/Written_Language__c.field-meta.xml
<CustomField>
    <fullName>Written_Language__c</fullName>
    <description>2016.05.30 khir: Field Label changed to the same as Field Name, &quot;Written Language&quot;</description>
    <label>Written Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>