force-app/main/default/objects/Contact/fields/X1_to_1_mailings__c.field-meta.xml
<CustomField>
    <fullName>X1_to_1_mailings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1-to-1 mailings</label>
    <type>Checkbox</type>
</CustomField>