force-app/main/default/objects/Contact/recordTypes/Contact_Media.recordType-meta.xml
<RecordType>
    <fullName>Contact_Media</fullName>
    <active>true</active>
    <description>Used exclusively for media Contacts handled by BM</description>
    <label>Contact Media</label>
</RecordType>