force-app/main/default/objects/Contact/validationRules/Fax_number_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_number_check</fullName>
    <active>false</active>
    <description>Checks that fax number is written in internatinoal format</description>
    <errorConditionFormula>NOT( BEGINS(    Fax , &quot;+&quot;))</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Fax number must start with &quot;+&quot; followed by country code.
Example: +1 703 555 1212</errorMessage>
</ValidationRule>