force-app/main/default/objects/Contact/validationRules/Phone_number_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_check</fullName>
    <active>false</active>
    <description>Checks that phone number is written in internatinoal format</description>
    <errorConditionFormula>NOT( BEGINS(Phone, &quot;+&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number must start with &quot;+&quot; followed by country code.
Example: +1 703 555 1212</errorMessage>
</ValidationRule>