force-app/main/default/objects/Contact/validationRules/Phone_number_check_asst.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_check_asst</fullName>
    <active>false</active>
    <description>Checks that assistant phone number is written in internatinoal format</description>
    <errorConditionFormula>NOT( BEGINS(    AssistantPhone , &quot;+&quot;))</errorConditionFormula>
    <errorDisplayField>AssistantPhone</errorDisplayField>
    <errorMessage>Phone number must start with &quot;+&quot; followed by country code.
Example: +1 703 555 1212</errorMessage>
</ValidationRule>