force-app/main/default/objects/Contact/validationRules/Phone_number_check_direct.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_check_direct</fullName>
    <active>false</active>
    <description>Checks that direct phone number is written in internatinoal format</description>
    <errorConditionFormula>NOT( BEGINS(Phone_direct__c , &quot;+&quot;))</errorConditionFormula>
    <errorDisplayField>Phone_direct__c</errorDisplayField>
    <errorMessage>Phone number must start with &quot;+&quot; followed by country code.
Example: +1 703 555 1212</errorMessage>
</ValidationRule>