force-app/main/default/objects/Contact/validationRules/Phone_number_check_home.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_check_home</fullName>
    <active>false</active>
    <description>Checks that home phone number is written in internatinoal format</description>
    <errorConditionFormula>NOT( BEGINS(   HomePhone , &quot;+&quot;))</errorConditionFormula>
    <errorDisplayField>HomePhone</errorDisplayField>
    <errorMessage>Phone number must start with &quot;+&quot; followed by country code.
Example: +1 703 555 1212</errorMessage>
</ValidationRule>