force-app/main/default/objects/Contact/validationRules/Phone_number_check_mobile.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_check_mobile</fullName>
    <active>false</active>
    <description>Checks that mobile phone number is written in internatinoal format</description>
    <errorConditionFormula>NOT( BEGINS( MobilePhone  , &quot;+&quot;))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Phone number must start with &quot;+&quot; followed by country code.
Example: +1 703 555 1212</errorMessage>
</ValidationRule>