force-app/main/default/objects/Contact/validationRules/Phone_number_check_other.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_check_other</fullName>
    <active>false</active>
    <description>Checks that other phone number is written in internatinoal format</description>
    <errorConditionFormula>NOT( BEGINS(  OtherPhone   , &quot;+&quot;))</errorConditionFormula>
    <errorDisplayField>OtherPhone</errorDisplayField>
    <errorMessage>Phone number must start with &quot;+&quot; followed by country code.
Example: +1 703 555 1212</errorMessage>
</ValidationRule>