force-app/main/default/objects/Contact/listViews/Armin_Information_Japan_Earthquake.listView-meta.xml
<ListView>
    <fullName>Armin_Information_Japan_Earthquake</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>FULL_NAME</columns>
    <columns>Information_Japan_Earthquake_Tsunami__c</columns>
    <columns>PCN_Modules_Services__c</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>Left_the_company__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Böshenz</value>
    </filters>
    <filters>
        <field>Email_address_probably_not_valid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Armin Information Japan Earthquake</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>