force-app/main/default/objects/Contact/listViews/CloudLocate_Campaign_Contacts.listView-meta.xml
<ListView>
    <fullName>CloudLocate_Campaign_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CloudLocate_Redemption_Code_c__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CloudLocate Campaign Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>