force-app/main/default/objects/Contact/listViews/Contacts_created_today.listView-meta.xml
<ListView>
    <fullName>Contacts_created_today</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/14/2016 12:00 AM</value>
    </filters>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Project Form - Customer,Web,Online Shop,PCN subscription</value>
    </filters>
    <label>Contacts created yesterday</label>
    <sharedTo>
        <group>Business_Marketing</group>
    </sharedTo>
</ListView>