force-app/main/default/objects/Contact/listViews/David_Li_PCN.listView-meta.xml
<ListView>
    <fullName>David_Li_PCN</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PCN_Modules_Services__c</columns>
    <columns>PCN_Standard_Chips__c</columns>
    <columns>PCN_Automotive_Chips__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>adrian</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>murali</value>
    </filters>
    <label>David Li PCN</label>
    <sharedTo>
        <roleAndSubordinatesInternal>China</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>