force-app/main/default/objects/Contact/listViews/Deactivated_Community_Contacts.listView-meta.xml
<ListView>
    <fullName>Deactivated_Community_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Registered Community Users - Deactivated</value>
    </filters>
    <label>Deactivated Community Contacts</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>