force-app/main/default/objects/Contact/listViews/Finance_Opt_Out.listView-meta.xml
<ListView>
    <fullName>Finance_Opt_Out</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Product_News__c</columns>
    <columns>Function__c</columns>
    <columns>Financial_News__c</columns>
    <columns>Role__c</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Portfolio manager,Investment banker,Sales/Broker,Trader,Auditor,Consultant</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Finance Opt Out</label>
    <sharedTo>
        <group>Business_Marketing</group>
    </sharedTo>
</ListView>