force-app/main/default/objects/Contact/listViews/Finance_Small.listView-meta.xml
<ListView>
    <fullName>Finance_Small</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Product_News__c</columns>
    <columns>Function__c</columns>
    <columns>Financial_News__c</columns>
    <columns>Role__c</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Portfolio manager,Investment banker,Sales/Broker,Trader,Auditor,Consultant</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>All Finance Contacts Small</label>
    <sharedTo>
        <group>Business_Marketing</group>
        <group>Finance_Partners</group>
    </sharedTo>
</ListView>